[project]
name = "form-autocomplete-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nest-asyncio>=1.6.0",
    "openai>=1.82.0",
    "openai-agents>=0.0.16",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "streamlit>=1.45.1",
]
